Fix style: make links visible inside info-container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,6 +298,10 @@ footer > * {
 	border-radius: var(--border-radius-large);
 }
 
+.info-container a:not([class]) {
+	text-decoration-color: inherit;
+}
+
 .info-container > *:not(:first-child) > * {
 	padding-top: calc(var(--s3) + 2%);
 }
